# dywoqlib

./: .clang-format  .gitignore  README.md  `synopsis.hxx  array.go  doc.go  go.mod  map.go  vector.go
.github/: .pr_agent.toml  labeler.yml
algorithms/: doc.go  gcd.go  gcd_test.go  parts.go  parts_test.go
allocation/: doc.go  example_test.go  sizer.go
asm/: string.go  string.s  string_test.go
atd/: errors.go  fifo.go  fifo_test.go  lifo.go  lifo_test.go
attribute/: attribute_test.go  benchmark_test.go  constants.go  custom.go  deprecated.go  deprecated_test.go  doc.go  event.go  experimental.go  experimental_test.go  function.go  interfaces.go  management.go  mode.go  output.go  removed.go  removed_test.go  todo.go  todo_test.go  type.go  unsafe.go  unsafe_test.go
attributes/: function.go  mode.go  output.go  todo.go
console/: clear.go  errors.go  run.go
container/: adder.go  doc.go  errors.go  errros.go  fixed.go  interfaces.go  iterable.go  length.go  management.go  management_test.go  nativegetter.go  panic.go  peeker.go  sizer.go  slice.go  slice_test.go
dywoqlib/: .clang-format  .clangd  CMakeLists.txt
dywoqlib/include/dywoqlib/: __config.hxx  config.hxx  constraints.hxx  smart_ptr.hxx  source.hxx  types.hxx
dywoqlib/include/dywoqlib/__constraints/: arithmetic.hxx  array.hxx  base_of.hxx  class.hxx  const.hxx  constraints.hxx  enum.hxx  floating_point.hxx  function.hxx  implementation.hxx  integer.hxx  is_constraint_valid.hxx  pointer.hxx  reference.hxx  same_as.hxx  union.hxx  void.hxx  volatile.hxx
dywoqlib/src/dywoqlib/: source.cxx
(+273 files in other folders)
